<resources>
    <string name="app_name">FindEvents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Authentification</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_password">Mots de passe (Obligatoire)</string>
    <string name="prompt_passwordConfirmation">Confirmation de Mots de passe (Obligatoire)</string>
    <string name="action_sign_in">Se Connecter</string>
    <string name="action_sign_up">Inscription</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Cette adresse email est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Les autorisations de contacts sont nécessaires pour fournir des compléments de courrier électronique."
    </string>
    <string name="title_activity_sign_up">Inscription</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="evenement">Evenement</string>
    <string name="titre_de_l_v_nement">Titre de l\'évènement</string>
    <string name="dateCreation">Date de création</string>
    <string name="description">Description</string>
    <string name="titreEvenement">Titre de l\'évenement</string>
    <string name="position">Position</string>
    <string name="dateEvenement">Date de l\'évènement</string>
    <string name="Tous_Evenements">Voir tous les évènements</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="title_activity_show_all">ShowAllActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <!-- Pour le formulaire d'ajoute d'évènement -->
    <string name="prompt_title">Titre de l\'évènement</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_locationname">Adresse</string>
    <string name="prompt_dateEvent">Date de l\'Évènement</string>
    <string name="prompt_adresse">Adresse complet du L\'évènement</string>
    <string name="action_getLatLngButton">Récuperer LatLng de l\'adresse</string>
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_longtitude">Longitude</string>
    <string name="action_Eventbutton">Ajouter</string>
    <!-- Pour le formulaire Adresse -->
    <string name="search_hint">Saisir un Lieu</string>
    <string name="search_label">Lieu</string>
    <!-- Pour l'activité ShowAllEvent -->
    <string name="cardModelTitle">Évènement</string>
    <string name="cardModelAdresse">Adresse</string>
    <!-- Pour l'activité ShowEventDetail -->
    <string name="prompt_titleEvent">Titre de l\'Évènement</string>
    <string name="prompt_descriptionEvent">Description</string>
    <string name="prompt_date1Event">01/02/2019</string>
    <string name="prompt_date2Event">20/03/2019</string>
    <string name="action_participateButton">Participer</string>
    <string name="action_modifyButton">Modifier</string>
    <string name="action_deleteButton">Supprimer</string>

    <!-- Pour l'activité custom_dialog -->
    <string name="label_submit">Envoyer</string>
    <string name="label_cancel">Annuler</string>
    <string name="label_report">Commentaire</string>
    <string name="label_type_your_comment">écrit ton commentaire</string>
    <string name="title_activity_maps2">Map</string>
    <string name="prompt_maps">Voir les évènements sur le Map</string>


</resources>
